Adding custom banner.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@
 ## ---
 ## Startup information logging can be turned off.
 #spring.main.log-startup-info=false
-#spring.banner.location=classpath:banner.txt
+spring.banner.location=classpath:banner.txt
